Fix redundant spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,7 +69,7 @@ a {
     margin-inline: auto; */
 
     width: 1000px;
-    min-height: calc(100vh - 130px);
+    min-height: calc(100vh - 150px);
 
     margin-bottom: 20px;
 }
